# GhostCall

./: .gitignore  README.md  SKILL.md  backend_development_plan.md  init_credit_system.py
backend/: .env.example  AGENT_REST_API.md  DASHBOARD_API.md  pyproject.toml
backend/scripts/: check_remote_status.py  deploy_via_ssh.py  seed_mock_data.py
backend/src/: config.py  database.py  exceptions.py  logger.py  main.py  models.py  schemas.py
backend/src/agent/: router.py  schemas.py  service.py
backend/src/auth/: config.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
backend/src/dashboard/: router.py  schemas.py  service.py
backend/src/task/: router.py  schemas.py  service.py
backend/tests/: test_dashboard_api.py  test_smoke_flow.py
backend/web/: app.js  index.html  styles.css
frontend/scripts/: deploy_frontend_via_ssh.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/dashboard/[...path]/: route.ts
